examples/test/testpolicy14364.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14364
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key4: value23
      key10: value31
      key25: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value15
          key45: value30
      podSelector:
        matchLabels:
          key20: value47
          key41: value42
          key25: value13
